--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,9 @@
-{}
+{
+  "hosting": {
+    "public": "/",
+    "rewrites": [{
+      "source": "**",
+      "destination": "/index.html"
+    }]
+  }
+}
